WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157555
Videos allowed to play through the Main Content restriction should not pause when scrolled off-screen.
https://bugs.webkit.org/show_bug.cgi?id=157555
Summary
Videos allowed to play through the Main Content restriction should not pause ...
Jer Noble
Reported
2016-05-10 19:33:24 PDT
Videos allowed to play through the Main Content restriction should not pause when scrolled off-screen.
Attachments
Patch
(4.75 KB, patch)
2016-05-10 20:02 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2016-05-10 20:02:59 PDT
Created
attachment 278572
[details]
Patch
Jer Noble
Comment 2
2016-05-10 20:03:55 PDT
<
rdar://problem/26013966
>
WebKit Commit Bot
Comment 3
2016-05-11 09:19:31 PDT
Comment on
attachment 278572
[details]
Patch Clearing flags on attachment: 278572 Committed
r200688
: <
http://trac.webkit.org/changeset/200688
>
WebKit Commit Bot
Comment 4
2016-05-11 09:19:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug