Videos allowed to play through the Main Content restriction should not pause when scrolled off-screen. https://bugs.webkit.org/show_bug.cgi?id=157555

Reviewed by Eric Carlson.

Source/WebCore:

Test: media/video-main-content-allow-then-scroll.html

* html/MediaElementSession.cpp:
(WebCore::isMainContent):

LayoutTests:

* media/video-main-content-allow-then-scroll-expected.txt: Added.
* media/video-main-content-allow-then-scroll.html: Added.


Canonical link: https://commits.webkit.org/175706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200688 268f45cc-cd09-0410-ab3c-d52691b4dbfc